# OCX_Schema

./: .gitignore  .xsdata.xml  CHANGELOG.md  DATABINDING.md  LICENSE  MANIFEST.in  Makefile  OCX_Schema.xsd  PRERELEASE_CHANGELOG.md  README.md  __init__.py  databinding.rst  environment.yml  insert_version.py  main.py  pyproject.toml  unitsmlSchema_lite-0.9.18.xsd  xsdata_package.py
.github/workflows/: python-publish.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/api/: generated.AirPipeHeight.rst  generated.AmountOfSubstance.rst  generated.AmountOfSubstanceType.rst  generated.AngleOfRepose.rst  generated.AngleTolerance.rst  generated.ApPos.rst  generated.ApplicationRef.rst  generated.ApplicationRefT.rst  generated.Area.rst  generated.ArmLengthU.rst  generated.ArmLengthV.rst  generated.Arrangement.rst  generated.ArrangementT.rst  generated.Axis.rst  generated.BarSection.rst  generated.BarSectionAttributesManufacture.rst  generated.BarSectionContour.rst  generated.BarSectionT.rst  generated.BaseCurve.rst  generated.BaseRadius.rst  generated.BlockCoefficient.rst  generated.BoundedRefT.rst  generated.BoundingBox.rst  generated.BoundingBoxT.rst  generated.Bracket.rst  generated.BracketParameters.rst  generated.BracketParametersT.rst  generated.BracketRef.rst  generated.BracketRefT.rst  generated.BracketT.rst  generated.BuilderInformation.rst  generated.BuilderInformationT.rst  generated.BulbAngle.rst  generated.BulbBottomRadius.rst  generated.BulbFlat.rst  generated.BulbFlatT.rst  generated.BulbInnerRadius.rst  generated.BulbOuterRadius.rst  generated.BulbTopRadius.rst  generated.BulkCargo.rst  (+1517 more)
ocx/: .xsdata.xml  OCX_Schema.xsd  __init__.py
ocx/ocx_286/: __init__.py  ocx_286.py  unitsml_schema_lite_0_9_18.py
ocx/ocx_286_fix/: __init__.py
ocx/ocx_300a0/: __init__.py  ocx_schema.py  unitsml_schema_lite_0_9_18.py
ocx/ocx_300b0/: __init__.py  ocx_300b0.py
ocx/ocx_300b1/: ocx_300b1.py
ocx/ocx_300b2/: ocx_300b2.py
ocx/ocx_300b3/: ocx_300b3.py
ocx/ocx_300b4/: ocx_300b4.py
ocx/ocx_300b5/: ocx_300b5.py
ocx/ocx_300b6/: __init__.py  ocx_300b6.py
ocx/ocx_300b7/: __init__.py  ocx_300b7.py
ocx/ocx_300rc1/: __init__.py  ocx_300rc1.py
ocx/ocx_300rc2/: __init__.py  ocx_300rc2.py
ocx/ocx_300rc3/: __init__.py  ocx_300rc3.py
ocx/ocx_300rc4/: ocx_300rc4.py
ocx/ocx_300rc5/: __init__.py  ocx_300rc5.py
ocx_286/: __init__.py  ocx_schema.py  unitsml_schema_lite_0_9_18.py  xml.py
ocx_3_0_0_alpha/: __init__.py  ocx_schema.py  unitsml_schema_lite_0_9_18.py  xml.py
